[gd_scene load_steps=12 format=3 uid="uid://c0xcxlgy8s1cb"]

[ext_resource type="Theme" uid="uid://irxranmdn2da" path="res://project/src/scene/main/style/PlayBtnTheme.tres" id="1"]
[ext_resource type="Script" path="res://project/src/scene/main/Main.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ci3ckulm8gder" path="res://project/src/scene/main/sprite/logo.png" id="3"]
[ext_resource type="FontFile" uid="uid://xyyvkxkerboq" path="res://project/src/style/font/Dogfiles.ttf" id="4"]
[ext_resource type="PackedScene" path="res://project/src/scene/background/Bg.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://cys0wjgw5g6hy" path="res://project/src/common/safe-area/safe-area-n2d/SafeAreaN2D.tscn" id="6"]
[ext_resource type="Theme" uid="uid://qryeto18s14y" path="res://project/src/scene/main/style/GuideBtnTheme.tres" id="7"]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)

[node name="Main" type="Node2D"]
script = ExtResource("2")

[node name="Bg" parent="." instance=ExtResource("5")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="SafeAreaN2D" parent="." instance=ExtResource("6")]

[node name="GameName" type="Label" parent="SafeAreaN2D"]
offset_left = 80.0
offset_top = 200.0
offset_right = 1000.0
offset_bottom = 294.0
pivot_offset = Vector2(677, 94)
theme_override_colors/font_color = Color(1, 0.388235, 0.278431, 1)
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 100
text = "Doge The Creeps"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="TextureRect" parent="SafeAreaN2D"]
offset_left = 280.0
offset_top = 400.0
offset_right = 780.0
offset_bottom = 900.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 6

[node name="PlayBtn" type="Button" parent="SafeAreaN2D"]
offset_left = 357.0
offset_top = 1300.0
offset_right = 757.0
offset_bottom = 1500.0
theme = ExtResource("1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 100
text = "Play"

[node name="GuideBtn" type="Button" parent="SafeAreaN2D"]
offset_left = 357.0
offset_top = 1600.0
offset_right = 757.0
offset_bottom = 1800.0
theme = ExtResource("7")
theme_override_colors/font_color = Color(1, 0.388235, 0.278431, 1)
theme_override_fonts/font = SubResource("5")
theme_override_font_sizes/font_size = 100
text = "Guide"

[node name="HighScore" type="Label" parent="SafeAreaN2D"]
offset_left = 88.0
offset_top = 1000.0
offset_right = 1008.0
offset_bottom = 1094.0
pivot_offset = Vector2(677, 94)
theme_override_colors/font_color = Color(1, 0.388235, 0.278431, 1)
theme_override_fonts/font = SubResource("4")
theme_override_font_sizes/font_size = 100
text = "High Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreValue" type="Label" parent="SafeAreaN2D"]
offset_left = 88.0
offset_top = 1100.0
offset_right = 1008.0
offset_bottom = 1194.0
pivot_offset = Vector2(677, 94)
theme_override_colors/font_color = Color(1, 0.388235, 0.278431, 1)
theme_override_fonts/font = SubResource("4")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="SafeAreaN2D/PlayBtn" to="." method="to_level_1"]
[connection signal="pressed" from="SafeAreaN2D/GuideBtn" to="." method="to_guide"]
